      URL. Once the log is accessed it is rotated automatically by the
      repository server. Subsequent accesses to the log URL will only
      yield log entries added since the last access. (CNY-638)
    * The Users and Groups tab in the web management UI is no longer
      highlighted when administrators change their passwords.

  o Client Changes:
    * Added --what-provides option to query and repquery

  o Bug Fixes:
    * The Conary Repository web interface no longer returns a
      HTTP_FORBIDDEN (403) when a bad password is given by the user.
      This allows the user to re-try authentication.
    * The --signatures and --buildreqs flags now work with conary
      showcs.  (CNY-642)
    * Fixed a bug in the NetworkRepositoryClient default pwPrompt mechanism.
    * Improved error messages when entitlements fail to load (CNY-662)
    * The repository client no longer caches repo access info when the 
      attempt to access was unsuccessful. (CNY-673, affects CNY-578)
    * Select better flavors for updateall when updating x86 troves
      on an x86_64 system (CNY-628)
    * Fixed a bug that caused migrate behavior to not respect pins when 
      the pinned troves were set to be erased (CNY-680).

Changes in 1.0.23:
  o API Additions:
    * The interface to create, list and delete access groups and
      modify the users therein through is now exposed though
      ConaryClient.
    * The interface to delete entitlement groups is now exposed
      through ConaryClient.

  o Client Changes:
    * "conary updateall" now accepts the --keep-required command line
      argument.
    * the mirror script now provides download/commit feedback using
      display callbacks like other conary commands
    * the excludeTroves config option will now keep fresh installs from
      happening when an update job is split due to a pinned trove.

  o Server Changes:
    * The repository database migration code now reports an error when